[tool.poetry]
name = "sb3alpha"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.10"
sb3-contrib = ">=2.0.0a1"
stable-baselines3 = ">=2.0.0a1"
gymnasium = {version = "^0.28.1", extras = ["atari", "accept-rom-license", "box2d"]}
torch = {version = "^2.0.0+cu118", source = "pytorch-cu118"}
opencv-python = "^4.7.0.72"
tensorboard = "^2.12.2"

[tool.poetry.dev-dependencies]
pytest = "^6.2"

[[tool.poetry.source]]
name = "pytorch-cu118"
url = "https://download.pytorch.org/whl/cu118"
default = false
secondary = true

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
