
[project]
name = ""
version = ""
description = ""
authors = [
    {name = "n", email = "n"},
]
dependencies = [
    "torch @ https://download.pytorch.org/whl/cu118/torch-2.0.1%2Bcu118-cp310-cp310-linux_x86_64.whl",
    "torchvision @ https://download.pytorch.org/whl/cu118/torchvision-0.15.2%2Bcu118-cp310-cp310-linux_x86_64.whl",
    "gymnasium[accept-rom-license,atari,box2d]==0.28.1",
    "swig>=4.1.1",
]
requires-python = ">=3.10"
license = {text = "n"}
